--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -140,17 +140,15 @@
 }
 
 .game-frame {
-  width: 1280px;
-  height: 720px;
+  position: relative;
+  width: 100%;
+  height: 600px;
   border: none;
-  transform: scale(1); /* zoom! */
-  transform-origin: top center;
   border-radius: 80px;
   box-shadow: 0 0 48px rgba(0, 0, 0, 0.5);
   background: #000;
   z-index: 2;
 }
-
 
 .Toastify__toast {
   font-size: 0.95rem;
