--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -140,6 +140,7 @@
 }
 
 .game-frame {
+  display: block;
   position: relative;
   width: 100%;
   height: 600px;
@@ -172,7 +173,7 @@
   width: 100%;
   max-width: 900px;
   border-radius: 80px;
-  padding: 15px; /* spazio per il bordo */
+  padding: 0; /* spazio per il bordo */
   box-sizing: border-box;
 }
 
