--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -140,7 +140,6 @@
 }
 
 .game-frame {
-  display: block;
   position: relative;
   width: 100%;
   height: 600px;
@@ -173,7 +172,7 @@
   width: 100%;
   max-width: 900px;
   border-radius: 80px;
-  padding: 0; /* spazio per il bordo */
+  padding: 15px; /* spazio per il bordo */
   box-sizing: border-box;
 }
 
